<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:visibility="gone"
        android:indeterminate="true" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <ImageView
            android:id="@+id/img_food"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@android:color/darker_gray"
            android:contentDescription="@string/image_food"
            android:scaleType="fitXY" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/lb_food"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name_food"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0" />


        <TextView
            android:id="@+id/tv_food"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            tools:text="@string/name_food"
            android:textSize="18sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lb_food"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/lb_category"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/category"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/lb_food"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lb_food"
            app:layout_constraintTop_toTopOf="@id/lb_food"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/tv_category"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:layout_marginLeft="10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_food"
            app:layout_constraintTop_toBottomOf="@+id/lb_category"
            app:layout_constraintVertical_bias="0.006"
            tools:text="@string/dummyWord" />

        <TextView
            android:id="@+id/lb_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/instruction"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_food"
            app:layout_constraintVertical_bias="0" />

        <TextView
            android:id="@+id/tv_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:maxLines="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/lb_instruction"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/lb_instruction"
            app:layout_constraintTop_toBottomOf="@+id/lb_instruction"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/dummyWord" />


        <TextView
            android:id="@+id/lb_ingredients"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/ingredients"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_instruction"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_ingredients1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:text="@string/dummyWord"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lb_ingredients"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_ingredients2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:text="@string/dummyWord"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients1"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_ingredients3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:text="@string/dummyWord"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients2"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_ingredients4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:text="@string/dummyWord"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients3"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_ingredients5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            tools:text="@string/dummyWord"
            android:textSize="14sp"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_ingredients4"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/lb_measure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/measure"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            app:layout_constraintBottom_toBottomOf="@id/lb_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/lb_ingredients"
            app:layout_constraintTop_toTopOf="@id/lb_ingredients"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/tv_measure1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="@string/dummyWord"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/lb_measure"
            app:layout_constraintTop_toBottomOf="@+id/lb_measure"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_measure2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="@string/dummyWord"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_measure1"
            app:layout_constraintTop_toBottomOf="@+id/tv_measure1"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_measure3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="@string/dummyWord"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_measure2"
            app:layout_constraintTop_toBottomOf="@+id/tv_measure2"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_measure4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="@string/dummyWord"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_measure3"
            app:layout_constraintTop_toBottomOf="@+id/tv_measure3"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_measure5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="@string/dummyWord"
            android:fontFamily="sans-serif-light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tv_measure4"
            app:layout_constraintTop_toBottomOf="@+id/tv_measure4"
            app:layout_constraintVertical_bias="0.006" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:src="@drawable/ic_fav_line"
        app:backgroundTint="@color/purple_200"
        app:layout_anchor="@id/app_bar"
        app:layout_anchorGravity="end|bottom|right"
        app:maxImageSize="28dp" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>